# libgp

./: .clang-format_IGNORE  .gitignore  CMakeLists.txt  CMakeSettings.json  conan_install.bat  conanfile.txt
src/: CMakeLists.txt  GpVersion.cpp  GpVersion.h  Model.cpp  Model.h
src/read/: Gp5Reader.cpp  Gp5Reader.h  GpReaderBase.cpp  GpReaderBase.h  GpReaderError.cpp  GpReaderError.h  StreamReader.h
tests/: CMakeLists.txt  Main.cpp  ReaderTests.cpp
tests/resources/: test.gp5  test.gpx
